# credit-card-default-risk-explainable-ai

./: .gitignore  Default_Risk_Prediction_using_XGBoost_and_SHAP_Explainability.ipynb  LICENSE  app.py  main.py  pyproject.toml  requirements.txt  template.py
data/processed/: X_train.csv  test_preprocessed.csv  y_test.csv
notebooks/: 01_eda.ipynb  02_model_training.ipynb  03_explainability.ipynb  X_test.csv  y_train.csv
reports/: model_balancing_results.csv  model_results_summary.csv
src/: data_preprocessing.py  explainability.py  logger_config.py  model_training.py
